# metamsg

./: .gitignore  Cargo.toml  README.md  clippy.toml
crates/metamsg-codec-mqtt/: Cargo.toml
examples/: client_channel.rs  server_bootstrap.rs
src/: bootstrap.rs  channel.rs  codec.rs  handle.rs  layer.rs  lib.rs
src/codec/: string_codec.rs
src/handle/: internal.rs  logger_handler.rs
src/handle/internal/: handle_chain.rs  handle_context.rs  head_context.rs  tail_context.rs
