[package]
name = "metamsg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tokio-stream = "0.1.9"
bytes = "1.1.0"
futures = "0.3.18"
async-trait = "0.1.56"
pin-project = "1"
pin-project-lite = "0.2.9"
thiserror = "1.0.31"
slotmap = "1.0.6"

[features]

[workspace]

members = [
    "crates/metamsg-codec-mqtt"
]


